# powermate_hid

./: .gitignore  55-powermate.rules  LICENSE  Makefile.am  Makefile.in  README.md  build_powermate_client.sh  configure  configure.ac  project.yml  test_drive
src/: Makefile.am  Makefile.in  main.c  old_powermate.c  powermate_hid.c  powermate_hid.h
test/: test_powermate_hid.c
